Include new email field
