# hr/specs/swagger.yaml
@@ -224,9 +224,9 @@ definitions:
         type: boolean
       employee_id:
         type: integer
-      fname:
+      name:
         type: string
-      lname:
+      email:
         type: string
       birth_date:
         type: string
@@ -260,6 +260,7 @@ definitions:
       - department
       - role
       - start_date
+      - email
     type: object
     properties:
       is_active:
@@ -267,6 +268,8 @@ definitions:
       fname:
         type: string
       lname:
+        type: string
+      email:
         type: string
       birth_date:
         type: string
@@ -297,6 +300,8 @@ definitions:
       fname:
         type: string
       lname:
+        type: string
+      email:
         type: string
       birth_date:
         type: string
